fixed spacing for smaller device and improved project/experience

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ li img{
   height: 60px;
 }
 .intro{
-  width: 90%;
+  width: 95%;
   height: 500px;
   background-image: url('./images/me.png');
   background-position: right;
@@ -82,17 +82,16 @@ li img{
   line-height: 30px;
 }
 article{
-  width: inherit;
 }
 #projects article .proj, #experience article .exp{
   width: 350px;
   height: 700px;
-  margin: 100px;
+  margin: 50px;
   padding: 20px;
   border: 4px solid var(--sec-color);
   border-radius: 15px;
   float: left;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: var(--sec-color, pink);
   transition: all 1s, .7s;;
   text-align: center;
@@ -123,9 +122,10 @@ section{
 
 #projects, #experience{
   background-color: var(--ter-color);
+  width: 90%;
 }
 #projects article, #experience article{
-  padding-left: 250px;
+  margin-left: 15%;
 }
 #about-me{
   border-top: 2px solid var(--ter-color);
